--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
-  "license": "ISC",
+  "license": "See license in LICENSE",
   "dependencies": {
     "discord.js": "^13.6.0",
     "dotenv": "^16.0.0",
